--- a/Page d'accueil du magasin de vidéo/style.css
+++ b/Page d'accueil du magasin de vidéo/style.css
@@ -1,17 +1,78 @@
 body {
+    font-family: sans-serif;
     margin: 10px;
-    display: flex;
+    border: 0px;
+    padding: 0px;
 }
+head {
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
+}
+
+header {
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
+}
+
+ul {
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
+}
+h2 {
+    font-weight: bold;
+}
+
 li {
     margin-right: 10px;
     display: inline;
     vertical-align: middle;
 }
+
+.breadcrumb {
+    margin-top: 20px;
+}
+
+.breadcrumb li a{
+    font-weight: normal;
+    font-size: 15px;
+}
+
+.breadcrumb li + li a{
+    padding: 12px;
+}
+
+.breadcrumb li + li:before {
+    content: "/";
+}
+
 a{
+    font-size: 15px;
     color: black;
     font-weight: bold;
     text-decoration: none;
 }
+
 a:hover {
 text-decoration: underline;
+}
+
+.first div {
+    margin: 5px;
+    padding: 15px;
+    border: 2px;
+    border-style: solid;
+    border-color: rgb(0, 0, 0);
+    width: 263px;
+    display: inline-block;
+}
+
+section img {
+    margin-bottom: 10px;
+}
+
+.title {
+    font-size: 20px;
 }
