--- a/Création d'un site web de portail immobilier/style.css
+++ b/Création d'un site web de portail immobilier/style.css
@@ -10,24 +10,30 @@ section {
     background-size: cover;
     font-weight: bold;
     padding: 10%;
+    margin: 0%;
 }
 
 header {
     text-align: center;
-    margin: -30px;
+    margin: -30px 0px;
 }
-/*rgb(255, 228, 196, .9)*/
+
 form {
-    margin: 2% 15%;
+    margin: -30px 15%;
     padding: 5%;
-    background-color: rgb(255, 255, 255, .9);
+    background-color: rgb(255, 228, 196, .9);
     text-align: center;
 }
 
 section form div {
     margin: 10px;
+    padding: 5px;
 }
 
 h1 {
     margin: 0;
+}
+
+input {
+    margin: 5px;
 }
