--- a/Page d'accueil du magasin de vidéo/style.css
+++ b/Page d'accueil du magasin de vidéo/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    margin: 10px;
+    margin: 0px;
     border: 0px;
     padding: 0px;
 }
@@ -11,9 +11,27 @@ head {
 }
 
 header {
+    background-color: black;
+    color: white;
+}
+
+.col1 {
+    margin: 0% 4%;
+}
+
+main {
+    background-color: rgb(150, 240, 182);
+    background-size: cover;
+    background-position: center;
     margin: 0px;
     border: 0px;
     padding: 0px;
+}
+
+header nav ul div {
+    box-sizing: border-box;
+    display: inline-block;
+    text-align: center;
 }
 
 ul {
@@ -22,24 +40,45 @@ ul {
     padding: 0px;
 }
 
-h2 {
+h1 {
     font-weight: bold;
+    font-size: 300%;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-h4 {
-    color: rgb(109, 109, 109);
+section div h1 {
+    font-weight: bold;
+    font-size: 200%;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h3 {
+    font-weight: bold;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+main h4 {
+    color: rgba(238,26,61,255);
     font-weight: bold;
     margin-bottom: -15px;
 }
 
-li {
+main li {
+    margin-right: 10px;
+    display: inline;
+    vertical-align: middle;
+}
+header li {
     margin-right: 10px;
     display: inline;
     vertical-align: middle;
 }
 
 .breadcrumb {
-    margin-top: 20px;
+    padding: 10px;
 }
 
 .breadcrumb li a{
@@ -55,11 +94,21 @@ li {
     content: "/";
 }
 
-a{
+main a{
     font-size: 15px;
-    color: black;
+    color: white;
     font-weight: bold;
     text-decoration: none;
+}
+header a{
+    font-size: 15px;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+main nav a{
+    color: black;
 }
 
 a:hover {
@@ -85,11 +134,64 @@ text-decoration: underline;
 }
 
 section img {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     min-width: 100%;
-
 }
 
 .title {
     font-size: 20px;
 }
+
+.text{
+    box-sizing: border-box;
+    width: 100%;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+footer div {
+    width: 300px;
+    box-sizing: border-box;
+    margin: 5px;
+    padding: 10px;
+    display: inline-block;
+}
+
+footer a{
+    font-size: 15px;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+footer h4 {
+    color: rgba(238,26,61,255);
+    font-weight: bold;
+}
+
+footer {
+    background-color: black;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    vertical-align: middle;
+}
+
+footer li {
+    margin-right: 10px;
+    padding: 5px;
+
+}
+
+@media screen and (max-width: 640px) {
+    body header nav ul div {
+        width: 100%;
+        padding-bottom: 10px;
+    }
+
+    footer div{
+        width: 100%;
+        text-align: center;
+    }
+  }
